--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,23 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 
 /*-----------------------------------------------*/
 
+/*---------------------ERROR-------------------*/
+
+/*-----------------------------------------------*/
+.header-error{background-color: black; margin-top: -90px; padding: 40px 0;}
+.error{ padding: 50px 0; margin-top: 10%}
+.box-error{text-align: right; border-right: 5px solid #7a68ae; padding-right: 7% !important; }
+.box-error h1{font-family: "Oswald", sans-serif; font-size: 12em; font-weight: 700; color: #7a68ae;}
+.error p{text-transform: uppercase; font-size: 1.2em; font-weight: 700;}
+.error h4{font-size: 22px; padding-left: 10px; color:#7a68ae; padding-bottom: 20px; padding-top: 10px}
+.error ul li{ list-style-type: square; list-style-position: inside; padding: 5px 10px; font-size: 16px; }
+.error a{padding-top: 10px; display: block; color: black; font-weight: 700;}
+.error span {font-size: 10px; padding: 0 10px 0 10px;}
+
+
+
+/*-----------------------------------------------*/
+
 /*---------------------CONTATO-------------------*/
 
 /*-----------------------------------------------*/
