--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ body {font-family: 'Open Sans', sans-serif !important; font-size: 14px !importan
 	transition: all 0.3s ease-in-out;
 }
 .btn-master:hover{
+	cursor: pointer;
 	text-decoration: none;
 	color: #fff; background-color: #000;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -523,17 +524,22 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 	width: auto;
 	float: left;
 }
-
-
 #jobs .title{margin-bottom: 30px;}
 #jobs .text-carreira {font-size: 18px; line-height: 1.8; padding-bottom: 30px}
 #jobs .secondary-title{padding-left: 20px; font-family: "Oswald", sans-serif; font-size: 30px; margin-bottom: 30px;}
-#jobs .jumbotron{height: 355px; overflow: auto;}
-.jumbotron h2{font-family: "Oswald", sans-serif; font-size: 24px; margin-bottom: 25px;}
-.jumbotron ul{display: block;}
-.jumbotron ul h4{display: block; font-weight: 700; font-size: 14px; margin-bottom: 20px}
-.jumbotron ul p{font-size:14px !important; font-weight: 400 !important; font-family: "Open Sans", sans-serif; text-decoration: underline;}
-.jumbotron ul li{font-weight: 300; font-size: 12px; padding: 5px 0; list-style: square; list-style-position: inside;}
+#jobs .col-md-3{padding: 0 5px !important;}
+#jobs .jumbotron{height: 100%;}
+.modal h2,
+.jumbotron h2{
+	font-family: "Oswald", sans-serif;
+	font-size: 20px;
+	margin-top: 5px !important; 
+}
+.modal-body ul{display: block;}
+.modal-body ul h4{display: block; font-weight: 700; font-size: 14px; margin-bottom: 20px}
+.modal-body ul p{font-size:14px !important; font-weight: 400 !important; font-family: "Open Sans", sans-serif; text-decoration: underline;}
+.modal-body ul li{font-weight: 300; font-size: 14px; padding: 5px 0; list-style: square; list-style-position: inside;}
+.modal-footer{text-align: left !important; margin-top: 0 !important; padding-top: 0 !important;}
 
 /*-----------------------------------------------*/
 
