--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,6 +59,15 @@
 		  	</div>
   		<div>
   	</footer>
+
+  	<!-- script crazy egg-->
+	<script type="text/javascript">
+		setTimeout(function(){var a=document.createElement("script");
+		var b=document.getElementsByTagName("script")[0];
+		a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0024/3911.js?"+Math.floor(new Date().getTime()/3600000);
+		a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+	</script>
+  	<!-- end script crazy egg-->
 	
 	<!-- Scripts -->
 	<script src="/js/vendor/jquery.min-1.11.0.js"></script>
