--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,14 +60,7 @@
   		<div>
   	</footer>
 
-  	<!-- script crazy egg-->
-	<script type="text/javascript">
-		setTimeout(function(){var a=document.createElement("script");
-		var b=document.getElementsByTagName("script")[0];
-		a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0024/3911.js?"+Math.floor(new Date().getTime()/3600000);
-		a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-	</script>
-  	<!-- end script crazy egg-->
+  	
 	
 	<!-- Scripts -->
 	<script src="/js/vendor/jquery.min-1.11.0.js"></script>
@@ -80,6 +73,21 @@
 	<script src="/js/mailchimp.js"></script>
 	<script src="/js/concrete.js"></script>
 
+	<!-- Google Tag Manager -->
+    <noscript>
+    	<iframe src="//www.googletagmanager.com/ns.html?id=GTM-N2HLTL"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+	</noscript>
+    <script>
+	    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	    })(window,document,'script','dataLayer','GTM-N2HLTL');
+    </script>
+    <!-- End Google Tag Manager -->
+
+
 	<script type="text/javascript" charset="utf-8">
 		$(function(){
 			$.stellar({
@@ -87,12 +95,6 @@
 				verticalOffset: 40
 			});
 		});
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-532914-1', 'concretesolutions.com.br');
-	  ga('send', 'pageview');
 
 		var calendar_json_url = "https://www.google.com/calendar/feeds/concretesolutions.com.br_k3ja6rfulbk38j40n74r86qq98@group.calendar.google.com/public/full?orderby=starttime&sortorder=ascending&max-results=5&futureevents=true&alt=json";
 		var modelVaga =  $("#vaga-modelo").html();
