Novas alterações home e carreira

--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,7 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 	-o-background-size: cover;
 	background-size: cover;
 }
+#seletiva{margin: 15px 0 25px 0;}
 .intro-jobs .hero-content{padding: 0; margin: 35% 0 0 0; float: left;}
 .intro-jobs .hero-content h1 {
 	background-color: rgba(0,0,0,0.8);
