--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -49,7 +49,7 @@ body {
 .title{text-transform: uppercase;}
 .no-margin{margin-top: 0 !important;}
 #conteudo{margin-bottom:50px; }
-.text-title{font-size: 27px; text-transform: uppercase; float: left; padding:13px 50px 13px 0;}
+.text-title{font-size: 25px; text-transform: uppercase; float: left; padding:13px 50px 13px 0;}
 /* ---------- Header ----------------*/
 .navbar-inverse {
 	background-color:#2f3238 !important;
@@ -145,10 +145,44 @@ input{outline: none !important;}
 /*----------------- Como fazemos -------------*/
 .banner-master{
 	height:280px;
-	width: 100%;
+	width: 75%;
 	margin-bottom:40px; 
 	position: relative;
+	float: right;
 }
+#menu{
+	height:280px;
+	width: 25%;
+	position: relative;	
+	float: left;
+}
+#menu li>a {
+	text-transform: uppercase;
+	position: relative;
+	display: block;
+	padding: 15px 33px;
+	font-family: "Oswald";
+	font-size: 16px;
+	color: #534E4E !important;
+}
+
+
+#menu li.active{
+	width: 90%;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  -moz-border-radius-bottomright: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  background-color: #7A68AE !important;
+}
+
+#menu li.active>a {
+	font-size: 20px;
+	color: #fff !important;
+}
+
 .banner-master .title{ margin: 20px 0 0 30px !important; padding: 5px; color:#000; font-size: 2.4em; display: inline-block;}
 .banner-master .bloco{
 	background-color: rgba(0,0,0,0.6); 
@@ -160,7 +194,7 @@ input{outline: none !important;}
 }
 .banner-master .bloco .text-banner-master{font-size: 1.2em;}
 .view {
-   width: 100%;
+   width: 75%;
    height: 100%;
    position: relative;
    cursor: pointer;
