--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -116,32 +116,7 @@ input{outline: none !important;}
 	padding: 14px;
 }
 
-/*---------------- Content ----------------*/
-.secondary-menu{ border-bottom: 1px solid #979797; height: 65px; margin-bottom: 50px;}
-.secondary-menu .navbar-nav{ padding-top: 6px; padding-bottom: 6px;}
-.secondary-menu .navbar-nav li{padding-left: 15px; padding-right: 15px;}
-.secondary-menu .navbar-nav li a{
-	position: relative;
-	display: block;
-	text-align: center; 
-	font-size: 22px; 
-	color: #fff; 
-	height: 40px; 
-	padding-top: 10px !important; 
-	padding-bottom: 10px !important; 
-	width: 174px;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	-ms-backface-visibility: hidden;
-	transition: all 0.2s ease-out;
-}
-.secondary-menu .navbar-nav li a.current,
-.secondary-menu .navbar-nav li a:hover{font-size: 22px; color: #fff;border-radius: 4px; background-color: #7A68AE;}
-.nav>li>a:focus{
-	border-radius: 4px;
-	background-color: #7A68AE !important;
-}
-	
+.divisoria{ border-bottom: 1px solid #979797; height: 10px; margin-bottom: 20px;}	
 /*----------------- Como fazemos -------------*/
 .banner-master{
 	height:280px;
