tweaks no CSS e ordem dos LIs

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -116,7 +116,7 @@ input{outline: none !important;}
 	padding: 14px;
 }
 
-.divisoria{ border-bottom: 1px solid #979797; height: 10px; margin-bottom: 20px;}	
+.divisoria{ border-bottom: 1px solid #979797; margin-bottom: 40px;}	
 /*----------------- Como fazemos -------------*/
 .banner-master{
 	height:280px;
