--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Concrete Solutions</title>
-	<meta name="description" content="Concrete Solutions">
+	<meta name="description" content="Usamos Lean, UX e engenharia ágil para ajudar empresas a criar softwares, sites e aplicativos mobile de sucesso">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="shortcut icon" href="/img/ico.ico">
 	<link type="text/css" rel="stylesheet" href="/css/style.css">
