Renaming cloud --> ecommerce

--- a/_includes/head-ecommerce.html
+++ b/_includes/head-ecommerce.html
@@ -3,9 +3,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Concrete Mobile</title>
-	<meta name="description" content="Concrete Solutions Cloud">
+	<meta name="description" content="Concrete Solutions E-Commerce">
 	<link rel="shortcut icon" href="/img/ico.ico">
-	<link type="text/css" rel="stylesheet" href="/css/style-cloud.css">
+	<link type="text/css" rel="stylesheet" href="/css/style-ecommerce.css">
 	<link type="text/css" rel="stylesheet" href="/css/vendor/bootstrap.min-3.1.1.css">
 	<script src="/js/vendor/modernizr.custom-2.6.2.js"></script>
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
