--- a/_layouts/default-ecommerce.html
+++ b/_layouts/default-ecommerce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head-cloud.html %}
+  {% include head-ecommerce.html %}
 
     <body>
     <!-- Google Tag Manager -->
@@ -18,7 +18,7 @@
     </script>
     <!-- End Google Tag Manager -->
     
-    {% include header-cloud.html %}
+    {% include header-ecommerce.html %}
 
     <div class="page-content">
       <div class="wrap">
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    {% include footer-cloud.html %}
+    {% include footer-ecommerce.html %}
 
     </body>
 </html>
