--- a/_includes/footer-ecommerce.html
+++ b/_includes/footer-ecommerce.html
@@ -25,7 +25,7 @@
 <script src="/js/vendor/jquery.touchswipe.min-1.6.5.js"></script>
 <script src="/js/vendor/jquery.localscroll-1.2.7-min.js"></script>
 <script src="/js/vendor/jquery.scrollTo-1.4.2-min.js"></script>
-<script src="/js/mobile.js"></script>
+<script src="/js/ecommerce.js"></script>
 <script>
 // script carrossel
 	$('#carousel').elastislide();
