--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
 						<p>Receba nossa newsletter:</p>
 						<form action="http://concretesolutions.us5.list-manage1.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=26dd60f3a9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 							<div class="mc-field-group">
-								<input type="text" name="EMAIL" id="mce-EMAIL" placeholder="seu e-mail" autocomplete="off"> 
+								<input type="text" name="EMAIL" id="mce-EMAIL" placeholder="seu e-mail" autocomplete="off">
 								<label for="mce-EMAIL"></label>
 							</div>
 							<div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
@@ -60,8 +60,8 @@
   		<div>
   	</footer>
 
-  	
-	
+
+
 	<!-- Scripts -->
 	<script src="/js/vendor/jquery.min-1.11.0.js"></script>
 	<script src="/js/vendor/bootstrap.min-3.1.1.js"></script>
@@ -110,21 +110,21 @@
             line = line.replace("{beneficios}", $('#beneficios').html());
             if(extras != '')
                 line = line.replace("{extras}", '<h4>Pontos Extras:</h4><ul>'+extras+'</ul>');
-            else 
+            else
             	line = line.replace("{extras}", extras);
             return line;
 		}
-		$(document).ready(function() {  
+		$(document).ready(function() {
 			GCalEvents(calendar_json_url);
 
 			//Enable swiping...
 			$(".carousel-inner").swipe( {
 				//Generic swipe handler for all directions
 				swipeLeft:function(event, direction, distance, duration, fingerCount) {
-					$(this).parent().carousel('next'); 
+					$(this).parent().carousel('next');
 				},
 				swipeRight: function() {
-					$(this).parent().carousel('prev'); 
+					$(this).parent().carousel('prev');
 				},
 				//Default is 75px, set to 0 for demo so any distance triggers swipe
 				threshold:0
@@ -144,83 +144,83 @@
 		});
 		{% endif %}
 		{% if page.is_carreiras == true %}
-			var urlvagasCSSP = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCS%20and%20base%3DSP";
-			var urlvagasCSRJ = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCS%20and%20base%3DRJ";
-			var urlvagasFIX  = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DFIX";
-			var urlvagasCR   = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCR";
-			$.getJSON(urlvagasCSSP, function (data) {
-			    var output = "";
-			    if (data.feed.entry == null) {
-			    	$('#vagas-cssp').siblings('.col-md-12').toggle();
-			    	$('#vagas-cssp').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
-			    } else {
-			        $.each(data.feed.entry, function (index, value) {
-			            $("#vagas-cssp").append(fillVaga(value.gsx$index.$t,
-														  value.gsx$titulo.$t,
-														  $("#mail-sp").text(),
-														  value.gsx$horario.$t,
-														  value.gsx$local.$t,
-														  value.gsx$competencias.$t,
-														  value.gsx$extras.$t,
-														  modelVaga));
-			        });
-			    }
-			});
-			$.getJSON(urlvagasCSRJ, function (data) {
-			    var output = "";
-			    if (data.feed.entry == null) {
-			    	$('#vagas-csrj').siblings('.col-md-12').toggle();
-			    	$('#vagas-csrj').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
-			    } else {
-			        $.each(data.feed.entry, function (index, value) {
-			            $("#vagas-csrj").append(fillVaga(value.gsx$index.$t,
-														  value.gsx$titulo.$t,
-														  $("#mail-rj").text(),
-														  value.gsx$horario.$t,
-														  value.gsx$local.$t,
-														  value.gsx$competencias.$t,
-														  value.gsx$extras.$t,
-														  modelVaga));
-			        });
-			    }
-			});
-			$.getJSON(urlvagasCR, function (data) {
-			    var output = "";
-			    if (data.feed.entry == null) {
-			    	$('#vagas-cr').siblings('.col-md-12').toggle();
-			        $("#vagas-cr").append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
-			    } else {
-			        $.each(data.feed.entry, function (index, value) {
-			            $("#vagas-cr").append(fillVaga(value.gsx$index.$t,
-													  value.gsx$titulo.$t,
-													  $("#mail-cr").text(),
-													  value.gsx$horario.$t,
-													  value.gsx$local.$t,
-													  value.gsx$competencias.$t,
-													  value.gsx$extras.$t,
-													  modelVaga));
-			        });
-			    }
-			});
-			$.getJSON(urlvagasFIX, function (data) {
-			    var output = "";
-			    if (data.feed.entry == null) {
-			    	$('#vagas-fix').siblings('.col-md-12').toggle();
-			        $('#vagas-fix').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
-			    } else {
-			        $.each(data.feed.entry, function (index, value) {
-			        	$("#vagas-fix").append(fillVaga(value.gsx$index.$t,
-													  value.gsx$titulo.$t,
-													  $("#mail-fix").text(),
-													  value.gsx$horario.$t,
-													  value.gsx$local.$t,
-													  value.gsx$competencias.$t,
-													  value.gsx$extras.$t,
-													  modelVaga));
-			        });
-			    }
-			});
-			window.setTimeout(openVaga, 500);
+			// var urlvagasCSSP = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCS%20and%20base%3DSP";
+			// var urlvagasCSRJ = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCS%20and%20base%3DRJ";
+			// var urlvagasFIX  = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DFIX";
+			// var urlvagasCR   = "https://spreadsheets.google.com/feeds/list/1zRxlDEsrpPsyPGHnw22So7mhsqAFtsKpwzRaRnGQhJA/od6/public/values?alt=json&sq=empresa%3DCR";
+			// $.getJSON(urlvagasCSSP, function (data) {
+			//     var output = "";
+			//     if (data.feed.entry == null) {
+			//     	$('#vagas-cssp').siblings('.col-md-12').toggle();
+			//     	$('#vagas-cssp').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
+			//     } else {
+			//         $.each(data.feed.entry, function (index, value) {
+			//             $("#vagas-cssp").append(fillVaga(value.gsx$index.$t,
+			// 											  value.gsx$titulo.$t,
+			// 											  $("#mail-sp").text(),
+			// 											  value.gsx$horario.$t,
+			// 											  value.gsx$local.$t,
+			// 											  value.gsx$competencias.$t,
+			// 											  value.gsx$extras.$t,
+			// 											  modelVaga));
+			//         });
+			//     }
+			// });
+			// $.getJSON(urlvagasCSRJ, function (data) {
+			//     var output = "";
+			//     if (data.feed.entry == null) {
+			//     	$('#vagas-csrj').siblings('.col-md-12').toggle();
+			//     	$('#vagas-csrj').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
+			//     } else {
+			//         $.each(data.feed.entry, function (index, value) {
+			//             $("#vagas-csrj").append(fillVaga(value.gsx$index.$t,
+			// 											  value.gsx$titulo.$t,
+			// 											  $("#mail-rj").text(),
+			// 											  value.gsx$horario.$t,
+			// 											  value.gsx$local.$t,
+			// 											  value.gsx$competencias.$t,
+			// 											  value.gsx$extras.$t,
+			// 											  modelVaga));
+			//         });
+			//     }
+			// });
+			// $.getJSON(urlvagasCR, function (data) {
+			//     var output = "";
+			//     if (data.feed.entry == null) {
+			//     	$('#vagas-cr').siblings('.col-md-12').toggle();
+			//         $("#vagas-cr").append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
+			//     } else {
+			//         $.each(data.feed.entry, function (index, value) {
+			//             $("#vagas-cr").append(fillVaga(value.gsx$index.$t,
+			// 										  value.gsx$titulo.$t,
+			// 										  $("#mail-cr").text(),
+			// 										  value.gsx$horario.$t,
+			// 										  value.gsx$local.$t,
+			// 										  value.gsx$competencias.$t,
+			// 										  value.gsx$extras.$t,
+			// 										  modelVaga));
+			//         });
+			//     }
+			// });
+			// $.getJSON(urlvagasFIX, function (data) {
+			//     var output = "";
+			//     if (data.feed.entry == null) {
+			//     	$('#vagas-fix').siblings('.col-md-12').toggle();
+			//         $('#vagas-fix').append('<div class="col-md-4"><h4>Sem vagas no momento!</h4></div>');
+			//     } else {
+			//         $.each(data.feed.entry, function (index, value) {
+			//         	$("#vagas-fix").append(fillVaga(value.gsx$index.$t,
+			// 										  value.gsx$titulo.$t,
+			// 										  $("#mail-fix").text(),
+			// 										  value.gsx$horario.$t,
+			// 										  value.gsx$local.$t,
+			// 										  value.gsx$competencias.$t,
+			// 										  value.gsx$extras.$t,
+			// 										  modelVaga));
+			//         });
+			//     }
+			// });
+			// window.setTimeout(openVaga, 500);
 		{% endif %}
 		});
 	</script>
