- Alteracoes na landing de ecommerce

--- a/_includes/header-ecommerce.html
+++ b/_includes/header-ecommerce.html
@@ -11,10 +11,10 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-right navbar-nav navbar-link">
-        <li><a href="#intro-home">Sobre</a></li>
         <li><a href="#how-we-do">Como fazemos?</a></li>
-        <li><a href="#cases">Nossos Cases</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#cases">Cases</a></li>
+        <li><a href="#partners">Parceiros</a></li>
+        <li><a href="#call-action">Contato</a></li>
       </ul>
     </div>
   </div>
