--- a/_includes/head-ecommerce.html
+++ b/_includes/head-ecommerce.html
@@ -2,8 +2,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Concrete Mobile</title>
-	<meta name="description" content="Concrete Solutions E-Commerce">
+	<title>Concrete e-Commerce</title>
+	<meta name="description" content="Concrete Solutions e-commerce. Construa seu e-commerce com quem entende. Somos a empresa que mais entregou projeto de e-commerce no Brasil.">
 	<link rel="shortcut icon" href="/img/ico.ico">
 	<link type="text/css" rel="stylesheet" href="/css/style-ecommerce.css">
 	<link type="text/css" rel="stylesheet" href="/css/vendor/bootstrap.min-3.1.1.css">
