--- a/css/style-ecommerce.css
+++ b/css/style-ecommerce.css
@@ -708,19 +708,12 @@ footer .box-content .newsletter form .send {	background: url("../img/ico-mail.pn
 }
 
 @media (max-width: 768px){
-	.form-inline .form-group {
-		float: right !important;
-		clear: both;
-	}
-	.newsletter button{ 
-		float: right;
-		clear: both;
-	}
-	.col-md-2 {
-		width: 100% !important;
-	}
+	.form-inline .form-group { float: right !important; clear: both;}
+	.newsletter button{float: right; clear: both;}
+	.col-md-2 {width: 100% !important;}
+}
 
 @media (max-width: 400px){
 	.newsletter form input {width: 295px !important;}
 	.navbar-brand img {width: 230px;}
-}	
+}
