- Inclusão dos robots.txt - inclusão de meta para google verification e robots index/follow - ajustes palavras nos cases de ecommerce

--- a/_includes/head-ecommerce.html
+++ b/_includes/head-ecommerce.html
@@ -2,8 +2,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Concrete e-Commerce</title>
-	<meta name="description" content="Concrete Solutions e-commerce. Construa seu e-commerce com quem entende. Somos a empresa que mais entregou projeto de e-commerce no Brasil.">
+	<title>e-Commerce | Concrete Solutions</title>
+	<meta name="description" content="Concrete Solutions e-Commerce. Construa seu e-Commerce com quem entende. Somos a empresa que mais entregou projeto de e-Commerce no Brasil.">
+	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" href="/img/ico.ico">
 	<link type="text/css" rel="stylesheet" href="/css/style-ecommerce.css">
 	<link type="text/css" rel="stylesheet" href="/css/vendor/bootstrap.min-3.1.1.css">
