--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Concrete Solutions</title>
 	<meta name="description" content="Usamos Lean, UX e engenharia ágil para ajudar empresas a criar softwares, sites e aplicativos mobile de sucesso">
+	<meta name="google-site-verification" content="spsWxQhSIqTuh6qSj-_pEhs7TskcFsWZdsWiR52gBrw" />
+	<meta name="robots" content="index, follow">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="shortcut icon" href="/img/ico.ico">
 	<link type="text/css" rel="stylesheet" href="/css/style.css">
