- Mudança de Titulo - inclusão de link canonical - inclusão de idioma no cabeçalho do html - inclusão de cases: casa e video, comprafacil e mercado livre.

--- a/_includes/head-ecommerce.html
+++ b/_includes/head-ecommerce.html
@@ -2,10 +2,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>e-Commerce | Concrete Solutions</title>
+	<title>Concrete Solutions e-Commerce</title>
 	<meta name="description" content="Concrete Solutions e-Commerce. Construa seu e-Commerce com quem entende. Somos a empresa que mais entregou projeto de e-Commerce no Brasil.">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" href="/img/ico.ico">
+	<link rel="canonical" href="http://www.concretesolutions.com.br/ecommerce/">
 	<link type="text/css" rel="stylesheet" href="/css/style-ecommerce.css">
 	<link type="text/css" rel="stylesheet" href="/css/vendor/bootstrap.min-3.1.1.css">
 	<script src="/js/vendor/modernizr.custom-2.6.2.js"></script>
