Alteracao do texto na pagina de carreira

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 	<section id="call-action">
 		<div class="container">
 			{% if page.is_carreiras == true %}
-                                <h2 class="text-call-action">Dificuldades com o Currículo ?</h2>
+                                <h2 class="text-call-action">Dúvidas com o cadastro ?</h2>
 				<a href="mailto:recrutamento@concretesolutions.com.br" class="btn-lg btn-master text-button">fale com RH</a>
 			{% else %}
                                 <h2 class="text-call-action">Vamos fazer o produto digital certo!</h2>
